Fix competition items numbers

--- a/app/views/applications/competition.html.haml
+++ b/app/views/applications/competition.html.haml
@@ -1,31 +1,31 @@
 %h1 Ожидаемое зачисление по квоте особого права
 %h2 Лечебное дело
-= render partial: 'competition_list', locals: {competitive_item_id: 47}
+= render partial: 'competition_list', locals: {code: 10}
 %h2 Педиатрия
-= render partial: 'competition_list', locals: {competitive_item_id: 48}
+= render partial: 'competition_list', locals: {code: 11}
 %h2 Стоматология
-= render partial: 'competition_list', locals: {competitive_item_id: 49}
+= render partial: 'competition_list', locals: {code: 12}
 %h1 Ожидаемое зачисление по квоте целевого приема
 %h2 Лечебное дело
-= render partial: 'competition_list', locals: {competitive_item_id: 44}
+= render partial: 'competition_list', locals: {code: 7}
 %h2 Педиатрия
-= render partial: 'competition_list', locals: {competitive_item_id: 45}
+= render partial: 'competition_list', locals: {code: 8}
 %h2 Стоматология
-= render partial: 'competition_list', locals: {competitive_item_id: 46}
+= render partial: 'competition_list', locals: {code: 9}
 %h1 Ожидаемое зачисление по общему конкурсу
 %h2 Лечебное дело
-= render partial: 'competition_list', locals: {competitive_item_id: 38}
+= render partial: 'competition_list', locals: {code: 1}
 %h2 Педиатрия
-= render partial: 'competition_list', locals: {competitive_item_id: 39}
+= render partial: 'competition_list', locals: {code: 2}
 %h2 Стоматология
-= render partial: 'competition_list', locals: {competitive_item_id: 40}
+= render partial: 'competition_list', locals: {code: 3}
 %h1 Ожидаемое зачисление на места с оплатой стоимости обучения
 %h2 Лечебное дело
-= render partial: 'competition_list', locals: {competitive_item_id: 41}
+= render partial: 'competition_list', locals: {code: 4}
 %h2 Педиатрия
-= render partial: 'competition_list', locals: {competitive_item_id: 42}
+= render partial: 'competition_list', locals: {code: 5}
 %h2 Стоматология
-= render partial: 'competition_list', locals: {competitive_item_id: 43}
+= render partial: 'competition_list', locals: {code: 6}
 %table.table
   %thead
     %tr
